--- a/app/src/main/res/layout/fragment_past_test_list.xml
+++ b/app/src/main/res/layout/fragment_past_test_list.xml
@@ -10,4 +10,4 @@
     android:layout_marginRight="16dp"
     app:layoutManager="LinearLayoutManager"
     tools:context=".PastTestFragment"
-    tools:listitem="@layout/fragment_past_test" />
+    tools:listitem="@layout/past_test_item" />
